--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@nextui-org/kbd": "2.0.25",
     "@nextui-org/link": "2.0.26",
     "@nextui-org/navbar": "2.0.27",
+    "@nextui-org/react": "^2.2.9",
     "@nextui-org/snippet": "2.0.30",
     "@nextui-org/switch": "2.0.25",
     "@nextui-org/system": "2.0.15",
@@ -39,7 +40,8 @@
     "react-dom": "18.2.0",
     "tailwind-variants": "^0.1.18",
     "tailwindcss": "3.3.5",
-    "typescript": "5.0.4"
+    "typescript": "5.0.4",
+    "xumm": "^1.6.5"
   },
   "devDependencies": {
     "prettier": "3.1.0"
