📝 update README.md

--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "next-app-template",
+  "name": "xrpl-dapp",
   "version": "0.0.1",
   "private": true,
+  "license": "MIT",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
