--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,11 +2,18 @@
   "extends": [
     "airbnb",
     "plugin:@typescript-eslint/recommended",
+    "plugin:react/recommended",
     "airbnb-typescript",
     "next/core-web-vitals",
     "prettier"
   ],
   "parserOptions": {
     "project": "./tsconfig.json"
+  },
+  "rules": {
+    "react/function-component-definition": [
+      2,
+      { "namedComponents": "arrow-function" }
+    ]
   }
 }
