✨ add deposit function

--- a/package.json
+++ b/package.json
@@ -23,18 +23,19 @@
     "@nextui-org/switch": "2.0.25",
     "@nextui-org/system": "2.0.15",
     "@nextui-org/theme": "2.1.17",
-    "@react-aria/ssr": "^3.8.0",
-    "@react-aria/visually-hidden": "^3.8.6",
+    "@react-aria/ssr": "^3.9.0",
+    "@react-aria/visually-hidden": "^3.8.7",
     "@types/node": "20.5.7",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.16",
+    "axios": "^1.6.2",
     "binance-api-node": "^0.12.7",
     "clsx": "^2.0.0",
     "eslint": "8.48.0",
     "eslint-config-next": "14.0.2",
     "framer-motion": "^10.16.5",
-    "intl-messageformat": "^10.5.0",
+    "intl-messageformat": "^10.5.8",
     "next": "^14.0.3",
     "next-themes": "^0.2.1",
     "postcss": "8.4.31",
@@ -47,8 +48,8 @@
     "xumm": "^1.6.5"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^6.12.0",
-    "@typescript-eslint/parser": "^6.12.0",
+    "@typescript-eslint/eslint-plugin": "^6.13.1",
+    "@typescript-eslint/parser": "^6.13.1",
     "eslint-config-prettier": "^9.0.0",
     "husky": "^8.0.3",
     "lint-staged": "^15.1.0",
