✨ feat connect evm

--- a/.env.local
+++ b/.env.local
@@ -1,3 +1,5 @@
+DATABASE_URL="mysql://root:password@localhost:3306/vanilla"
+
 NEXT_PUBLIC_OWNER_COLD_WALLET_ADDRESS=rpjpQizArxwQcjhWmioaqjojqv634LJ4as
 NEXT_PUBLIC_OWNER_COLD_WALLET_SEED=sEdSgPm5RVDwZv6zeS5AVurHk7U3by1
 NEXT_PUBLIC_OWNER_HOT_WALLET_SEED=sEd7TWZZnf9ZbzjN3YbTeNWKqcmhTwk
