--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "prettier:fix": "prettier . --write"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^1.0.10",
     "@crossmarkio/sdk": "0.3.5-beta",
     "@nextui-org/button": "2.0.26",
     "@nextui-org/code": "2.0.24",
@@ -23,11 +24,12 @@
     "@nextui-org/switch": "2.0.25",
     "@nextui-org/system": "2.0.15",
     "@nextui-org/theme": "2.1.17",
+    "@prisma/client": "5.7.0",
     "@react-aria/ssr": "^3.9.0",
     "@react-aria/visually-hidden": "^3.8.7",
-    "@types/node": "20.5.7",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
+    "@wagmi/core": "^1.4.10",
     "autoprefixer": "10.4.16",
     "axios": "^1.6.2",
     "binance-api-node": "^0.12.7",
@@ -37,22 +39,28 @@
     "framer-motion": "^10.16.12",
     "intl-messageformat": "^10.5.8",
     "next": "^14.0.3",
+    "next-auth": "^4.24.5",
     "next-themes": "^0.2.1",
     "postcss": "8.4.31",
+    "prisma": "^5.7.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "siwe": "^2.1.4",
     "tailwind-variants": "^0.1.18",
     "tailwindcss": "3.3.5",
-    "typescript": "5.0.4",
+    "wagmi": "^1.4.10",
     "xrpl": "^2.14.0",
     "xumm": "^1.6.6"
   },
   "devDependencies": {
+    "@types/node": "20.5.7",
     "@typescript-eslint/eslint-plugin": "^6.13.1",
     "@typescript-eslint/parser": "^6.13.1",
     "eslint-config-prettier": "^9.1.0",
     "husky": "^8.0.3",
     "lint-staged": "^15.1.0",
-    "prettier": "3.1.0"
+    "prettier": "3.1.0",
+    "ts-node": "^10.9.2",
+    "typescript": "5.0.4"
   }
 }
